# finalproject_zhmurov_-25-555

./: .gitignore  README.md  config.json  main.py  pyproject.toml
valutatrade_hub/: constants.py  decorators.py  logging_config.py
valutatrade_hub/cli/: interface.py
valutatrade_hub/core/: currencies.py  exceptions.py  models.py  usecases.py
valutatrade_hub/data/: portfolios.json  rates.json  users.json
valutatrade_hub/infra/: settings.py
valutatrade_hub/parser_service/: api_clients.py  config.py  scheduler.py  storage.py  updater.py
