[tool.poetry]
name = "finalproject-zhmurov-м25-555"
version = "0.1.0"
description = "ValutaTrade Hub - cryptocurrency portfolio manager"
authors = ["NickZ <nikolayzhmurov88@gmail.com>"]
packages = [{include = "valutatrade_hub"}]

[tool.poetry.dependencies]
python = "^3.10"
prettytable = "^3.10.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"

[tool.poetry.scripts]
# Скрипт для запуска через poetry run project
project = "main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
